# Freenove_Robot_Arm_Kit_for_Raspberry_Pi

./: README.md
Client/: Parameter.json  client.py  configuration.py  led.py  main.py  messageParser.py  messageQueue.py  messageRecord.py  setup_linux.py  setup_mac.py  setup_window.py
Client/Arm_Software_Codes/: client.py  command.py  configuration.py  fileDialogHelper.py  led.py  main.py  messageParser.py  messageQueue.py  messageRecord.py
Client/Arm_Software_Codes/record/: record_20240226_153736.txt
Client/Arm_Software_Codes/ui/: ui_arm.ui  ui_led.py  ui_parameter.py  ui_parameter.ui
Client/Arm_Software_Setup/: setup_linux.py  setup_mac.py  setup_window.py
Client/ui/: ui_arm.py  ui_led.ui  ui_parameter.ui
Server/: setup.py
Server-Pi5/: setup.py
Server-Pi5/Code/: main.py  messageQueue.py  messageRecord.py  sensor.py  servo.py
Server-Pi5/Libs/pwm-pi5/: pwm-pi5-overlay.dts  setup.py
Server/Code/: Freenove_PWM.sh  arm.py  buzzer.py  command.py  gpiozero_servo.py  ledPixel.py  main.py  messageParser.py  messageThread.py  piolib_servo.py  piolib_ws2812.py  rpilib_ws2812.py  sensor.py  servo.py  stepmotor.py
Server/Libs/utils/: README.md
Server/Libs/utils/piolib/examples/: CMakeLists.txt  freenove_pwm.c  freenove_pwm.h  freenove_ws2812.c  freenove_ws2812.h  test_freenove_pwm.c  test_freenove_ws2812.c
Server/Libs/utils/python/: multi_demo.py  piolib_pwm.py  piolib_servo.py  piolib_ws2812.py  pwm_demo.py  servo_demo.py  setup.py  ws2812_demo.py
Server/Server/: Parameter.json  arm.py  buzzer.py  command.py  ledPixel.py  main.py  messageParser.py  messageQueue.py  messageRecord.py  messageThread.py  sensor.py  servo.py  stepmotor.py
docs/source/: conf.py  index.rst
docs/source/fnk0036/codes/tutorial/: 0_Preparation.rst  1_Function_Tests.rst  2_Assembly_of_the_Robot_Arm.rst  3_Installation.rst  4_Usage_of_the_Software.rst  5_Introduction_to_the_APP.rst  6_Communication_Instructions.rst  7_Core_Code_Introduction.rst  List.rst  Preface.rst  Welcome.rst  What_s_Next.rst
